Tested in swagger

--- a/ShopOnline.Api/ShopOnline.Api.csproj
+++ b/ShopOnline.Api/ShopOnline.Api.csproj
@@ -16,11 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ShopOnline.Models\ShopOnline.Models.csproj" />
     <ProjectReference Include="..\ShopOnline.Web\ShopOnline.Web.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
